# C_Examples

./: .gitignore  README.md
01-Json_Abstraction/: CMakeLists.txt
01-Json_Abstraction/lib/: json.c  json.h
01-pthreads/: 02-EX1_creating_thread.c  05-cond.c  07-thread_debug.c  Makefile
02-ProductRegister/: list.c  list.h  menu.c  product.c  product.h  repository.c  repository.h
03-Call_ASM/: Makefile
03-Data_Structures/: Makefile  hashtable.c
03-POC/00-POC-07-MessageQueue_id/: CMakeLists.txt
03-POC/00-POC-07-MessageQueue_id/lib/include/: data.h
03-POC/00-POC-07-MessageQueue_id/lib/src/: data.c  people.c  pqueue.c
03-POC/00-POC-07-MessageQueue_id/queue_reader/: queue_reader.c
03-POC/00-POC-07-MessageQueue_id/queue_writer/: queue_writer.c
03-POC/00-POC-21-exec/: CMakeLists.txt
03-POC/00-POC-21-exec/app/: app.c
03-POC/00-POC-21-exec/exec/: exec.c
03-POC/00-POC-22-fork_exec/: CMakeLists.txt
03-POC/00-POC-22-fork_exec/fork_exec/: fork_exec.c
03-POC/00-POC-22-fork_exec/hello/: hello.c
03-POC/porting/: CMakeLists.txt  README
03-POC/porting/arch/: CMakeLists.txt
03-POC/porting/arch/include/: led.h
03-POC/porting/arch/pc/src/: led.c
03-POC/porting/arch/raspberry/src/: led.c
03-POC/porting/include/: application.h
03-POC/porting/src/: application.c
03-POC/server_no_thread/: CMakeLists.txt  client.c  server.c
04-Remote_Procedure_Call/: CMakeLists.txt
04-Security/: 01-bufferoverflow.c  Makefile
06-Applications/00-Application-03-Abstraction_Project_Cmake/: CMakeLists.txt
06-Applications/00-Application-03-Abstraction_Project_Cmake/Core/Common/: debugger.h
06-Applications/00-Application-03-Abstraction_Project_Cmake/Core/Framework/Device_IOCTL/: POWER_Options.h
06-Applications/00-Application-03-Abstraction_Project_Cmake/Core/Framework/Fileoperation/: socketoperation.c  socketoperation.h
06-Applications/00-Application-03-Abstraction_Project_Cmake/Core/Hardware/Device_Driver/: driver_adc.h  driver_dma.c  driver_flash.h  driver_timer.h
06-Applications/00-Application-03-Abstraction_Project_Cmake/Samples/: all_devices_calls.c
07-Examples/kill_example/: CMakeLists.txt  common.c  common.h  control.c  launch.c  process.c
10-POCS/04-Webserver/: CMakeLists.txt  client.c  client_demo.c
10-POCS/04-Webserver/public/: index.html
10-POCS/04-Webserver/public/js/: script.js
10-POCS/04-daemon/: CMakeLists.txt  daemon.service
10-POCS/04-daemon/src/: main.c
10-POCS/05-daemon_fork/: CMakeLists.txt  launcher.service
10-POCS/08-Thread_Process4/: CMakeLists.txt
10-POCS/08-Thread_Process4/src/process/: main.c
10-POCS/08-Thread_Process4/src/tasks/: program_a.h
10-POCS/08-Thread_Process4/src/thread/: CMakeLists.txt
12-DesignPatterns/01-TemplatePattern/: CMakeLists.txt  main.c
12-DesignPatterns/01-TemplatePattern/include/: soccer.h  template.h  voleyball.h
12-DesignPatterns/01-TemplatePattern/src/: soccer.c  template.c
12-DesignPatterns/MVC/: CMakeLists.txt  main.c
12-DesignPatterns/MVC/controller/: controller.h
12-DesignPatterns/MVC/model/: student.c  student.h
12-DesignPatterns/MVC/view/: view.c  view.h
14-zeromq/01-HelloWorld/: CMakeLists.txt  hello_world_client.c  hello_world_server.c
16-SmallProjects/01-Registry/: CMakeLists.txt  doc
16-SmallProjects/01-Registry/include/database/: db.h
16-SmallProjects/01-Registry/include/list/: list_dynamic.h
16-SmallProjects/01-Registry/include/view/: insertwindow.h  mainwindow.h
16-SmallProjects/01-Registry/src/list/: list_dynamic.c
16-SmallProjects/01-Registry/src/view/: mainwindow.c
16-SmallProjects/01-Registry/testcase/: test_database_connection.c  test_database_update.c  test_insertwindow.c  test_list_get.c  test_mainwindow.c
16-SmallProjects/04-Tank/: CMakeLists.txt  main.c
16-SmallProjects/05-ConvertGoProgram/: CMakeLists.txt
16-SmallProjects/05-ConvertGoProgram/db/: Database.h
16-SmallProjects/05-ConvertGoProgram/infrastructure/: Repository.c  Repository.h  compile.sh  controller.c  controller.h  file.c  file.h  handle_partials.c  handle_partials.h  main.c  parse.c  parse.h  queue.h  service.c  service.h  type.h
16-SmallProjects/05-ConvertGoProgram/models/: Product.h
16-SmallProjects/05-ConvertGoProgram/templates/: edit.html  head.html  index.html  menu.html  new.html
16-SmallProjects/05-ConvertGoProgram/templates/old/: edit.html  index.html  new.html
19-MySQL/02-cadastro_mysql/: CMakeLists.txt
19-MySQL/02-cadastro_mysql/src/: db.c
21-Linux_Programming_Socket/: CMakeLists.txt
21-Linux_Programming_Socket/chapter01/: socketpair_ex.c
21-Linux_Programming_Socket/include/: common.h
21-Linux_Programming_Socket/lib/: common.c
23-C_Exercises/C_lists/: CMakeLists.txt
23-C_Exercises/C_lists/list01_variaveis_e_expressoes/: ex_1.c  ex_10.c  ex_2.c  ex_4.c
23-C_Exercises/C_lists/list03_comandos_de_repeticao/: ex_20.c
23-C_Exercises/C_lists/list04_vetores_e_matrizes/: ex_25.c
23-C_Exercises/C_lists/list05_strings/: ex_2.c  ex_3.c  ex_6.c  ex_8.c
23-C_Exercises/C_lists/list06_structs/: ex_1.c
23-C_Exercises/C_lists/list08_recursao/: ex_2.c  ex_3.c
23-C_Exercises/C_lists/list10_alocacao_dinamica/: ex_2.c  ex_3.c
23-C_Exercises/C_lists/list11_arquivos/: ex_1.c  ex_4.c
Datastructures/ListaDuplamenteEncadiada/: CMakeLists.txt  lista_duplamente_encadiada.c  lista_duplamente_encadiada.h
Datastructures/ListaEncadiada/: CMakeLists.txt  lista_encadiada.c  lista_encadiada.h  main.c
Datastructures/ListaEncadiadaCircular/: CMakeLists.txt  lista_encadiada_circular.c  lista_encadiada_circular.h  main.c
Datastructures/ListaSequencial/: CMakeLists.txt  lista_sequencial.c  lista_sequencial.h  main.c
DesignPatterns/Factory/: CMakeLists.txt  circle.c  circle.h  main.c  rectangle.c  rectangle.h  shape.h  shape_factory.c  shape_factory.h  square.c  square.h
Examples/07-GetWebData/: CMakeLists.txt  main.c
Examples/08-Thread_Process2/: CMakeLists.txt
Examples/08-Thread_Process2/process/: main.c
Examples/Curl_Api/: CMakeLists.txt  csp_client.c  csp_client.h  main.c
Examples/Interactive_Daemon/: CMakeLists.txt  daemon.c  launch.c
(+1213 files in other folders)
